# geoblockchain

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_Ubuntu  README.md  customSpec.json  customSpecRaw.json  docker-compose.yml  pod-deployment.yml
client-js-test/: client.js  package-lock.json
consensus/pow/: Cargo.toml  README.md
consensus/pow/src/: lib.rs  worker.rs
consensus/sha3pow/: Cargo.toml
consensus/sha3pow/src/: geo.rs  lib.rs
contract/health-record/: Cargo.toml  lib.rs
js/ehr-client/: package-lock.json  package.json
js/ehr-client/pages/: _app.tsx  index.tsx  login.tsx
js/ehr-client/pages/patients/: [pId].tsx  index.tsx  new.tsx
js/ehr-client/pages/patients/[pId]/: new-record.tsx
js/ehr-client/pages/patients/[pId]/edit-record/: [hrId].tsx
js/ehr-client/src/constants/: healthRecords.ts  patientsResponse.ts
js/ehr-client/src/form/: inputArray.tsx
js/ehr-client/src/hooks/: useDoctor.tsx  usePatient.tsx  usePatientsPaginator.tsx
js/ehr-client/src/services/: health-record.ts  patient-service.ts
js/ehr-client/src/types/: doctor.ts  healthRecord.ts  patient.ts
js/ehr-client/src/utils/: blockchain-helper.ts  fomr.ts
js/node-test/: client.js  listen_blocks.js  package-lock.json  package.json
node/: Cargo.toml
node/src/: rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
